[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Entities/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entities/Scripts/Enemy_Tank_Ship.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Entities/Enemy_Tank_Ship.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Entities/Enemy_Turret.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="Enemy_Tank_Ship" instance=ExtResource( 1 )]
script = ExtResource( 2 )
HP = 4.5

[node name="sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Enemy_Turret" parent="." index="1" instance=ExtResource( 4 )]
position = Vector2( 16, -32 )
rotation = 3.14159

[node name="Enemy_Turret2" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 16, 32 )
rotation = 3.14159

[node name="collision" parent="." index="3"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="4"]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
